--- a/templates/card.html
+++ b/templates/card.html
@@ -12,7 +12,7 @@
         width: var(--w);
         height: var(--h);
         background: transparent;
-        font-family: "Fira Sans", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
+        font-family: "Fira Sans", "Noto Emoji", ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Arial, "Apple Color Emoji","Segoe UI Emoji";
         color: #eef2ff;
       }
 
